--- a/gui/resources.qrc
+++ b/gui/resources.qrc
@@ -6,5 +6,6 @@
         <file>resources/images/crate.png</file>
         <file>resources/images/awesomeface.png</file>
         <file>resources/images/steelborder_woodbox.png</file>
+        <file>resources/images/container2_specular.png</file>
     </qresource>
 </RCC>
